split contracter & dealer api
